fixed letter spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@
 .site-main .about-area .about-title h2 > span{
     display: block;
     font: normal bold 6.2rem/ 7.5rem;
-    letter-spacing: 2.5rem;
+    letter-spacing: 2rem;
 }
 .site-main .about-area .about-title .paragraph > p{
     padding: .4rem 0;
